0.11.5 unreleased

    - Fixing a bug failing to recognise @TB10.
    - Forbidding unknown chemical elements.
    - Accepting order subroutine in kekulise() in order to make the
      algorithm stable.
    - Supporting octahedral chirality in chirality_to_pseudograph().
    - Introducing Chemistry::OpenSMILES::is_aromatic_bond().

0.11.4 2025-02-04

    - Reducing false-positive cis/trans conflicts detected in _validate().
    - Fixing a bug causing allene systems to be validated more times than
      needed in _validate().

0.11.3 2025-02-03

    - Respecting and validating allene systems in _validate().
    - Better validation of cis/trans and chirality settings in _validate().

0.11.2 2025-01-16

    - Fixing nondeterminism in relative cis/trans marker placement.

0.11.1 2025-01-14

    - Recognising unimportant anomer chiral centers.

0.11.0 2025-01-06

    - Fixing handling of octahedral chirality.
    - Implementing an alternative method to mark cis/trans settings by
      giving their list instead of providing a callback.

0.10.0 2024-11-28

    - Reworking the logic of marking atoms with nonstandard valences.
    - Introducing Chemistry::OpenSMILES::valence().
    - Changing the API of Chemistry::OpenSMILES::Writer::write_SMILES() to
      accept option hash as the second parameter. Backwards compatibility
      for old calls is retained.

0.9.2 2024-11-26

    - Fix a pair of bugs in valence calculation.

0.9.1 2024-11-26

    - Handling trigonal bipyramidal centers.
    - Exporting all Chemistry::OpenSMILES::is_chiral_*() subroutines.
    - Fixing a bug where H atom counts of 0 given in square brackets were
      not preserved.

0.9.0 2023-10-25

    - Handling square planar chirality.

0.8.6 2023-06-19

    - Implementing is_ring_atom().
    - No longer removing chiral centers from atoms in rings.
    - Accepting coloring subroutine references in
      is_unimportant_double_bond() and mark_all_double_bonds().